--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org"
+<html xmlns:th="http://thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5" >
 <head>
     <div th:fragment="header-css">
@@ -38,7 +38,7 @@
                     <li class="active"><a th:href="@{/home}">Home</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active" sec:authorize="${!isAuthenticated()}"><a th:href="@{/register}"><span class="glyphicon glyphicon-user"></span> Register</a></li>
+                    <li class="active" sec:authorize="${!isAuthenticated()}"><a th:href="@{/user/register}"><span class="glyphicon glyphicon-user"></span> Register</a></li>
                     <li class="active" sec:authorize="${!isAuthenticated()}"><a th:href="@{/login}"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
                     <li class="active" sec:authorize="${isAuthenticated()}"><a th:href="@{/details}"><span class="glyphicon glyphicon-user"></span> User Details</a></li>
                     <li class="active" sec:authorize="${isAuthenticated()}"><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
