--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -35,11 +35,11 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a th:href="@{/home}">Home</a></li>
+                    <li class="active"><a th:href="@{/user/home}">Home</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active" sec:authorize="${!isAuthenticated()}"><a th:href="@{/user/register}"><span class="glyphicon glyphicon-user"></span> Register</a></li>
-                    <li class="active" sec:authorize="${!isAuthenticated()}"><a th:href="@{/login}"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
+                    <li class="active" sec:authorize="${!isAuthenticated()}"><a th:href="@{/user/login}"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
                     <li class="active" sec:authorize="${isAuthenticated()}"><a th:href="@{/details}"><span class="glyphicon glyphicon-user"></span> User Details</a></li>
                     <li class="active" sec:authorize="${isAuthenticated()}"><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
                 </ul>
