--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,29 +1,18 @@
 <html xmlns:th="http://thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5" >
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <div th:fragment="header-css">
         <!-- this is header-css -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" th:href="@{/css/main.css}"
-              href="../../css/main.css" />
-        <style type="text/css">
-            .block{
-                text-align: center;
-                border-style: solid;
-                margin: 0 auto;
-            }
-        </style>
+        <link rel="stylesheet" th:href="@{css/stylesheet.css}" href="css/stylesheet.css"/>
 
-        <div id="eLearn" class="block" style="background-color: black" >
+        <div id="eLearn" class="block" style="background-color: black">
             <h1 style="color: white">E-Learn that sh*t!</h1>
             <p style="color: white">E-Learning sessions that makes you Einstein type!</p>
         </div>
-
-
     </div>
-
 </head>
 <body>
 <div th:fragment="header">
@@ -38,10 +27,19 @@
                     <li class="active"><a th:href="@{/user/home}">Home</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active" sec:authorize="${!isAuthenticated()}"><a th:href="@{/user/register}"><span class="glyphicon glyphicon-user"></span> Register</a></li>
-                    <li class="active" sec:authorize="${!isAuthenticated()}"><a th:href="@{/user/login}"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
-                    <li class="active" sec:authorize="${isAuthenticated()}"><a th:href="@{/details}"><span class="glyphicon glyphicon-user"></span> User Details</a></li>
-                    <li class="active" sec:authorize="${isAuthenticated()}"><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
+                    <li class="active" sec:authorize="${!isAuthenticated()}"><a th:href="@{/user/register}"><span
+                            class="glyphicon glyphicon-user"></span> Register</a></li>
+                    <li class="active" sec:authorize="${!isAuthenticated()}"><a th:href="@{/user/login}"><span
+                            class="glyphicon glyphicon-log-in"></span> Log In</a></li>
+                    <li class="active" sec:authorize="${isAuthenticated()}"><a th:href="@{/details}"><span
+                            class="glyphicon glyphicon-user"></span> User Details</a></li>
+                    <li class="active" sec:authorize="${isAuthenticated()}"><a th:href="@{/logout}"><span
+                            class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
+                    <li class="active" sec:authorize="${isAuthenticated()}"><form th:action="@{/logout}" method="post">
+                        <span class="glyphicon glyphicon-log-out">
+                        <input class="logout" type="submit" value="Logout">
+                        </span>
+                    </form>Log Out</a></li>
                 </ul>
             </div>
         </div>
