--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,14 +8,15 @@
 <body>
 <div th:replace="header :: header"/>
 <div class="container">
-    <div class="starter-template">
-        <h1>Spring Boot Web Thymeleaf + Spring Security</h1>
-        <h2 sec:authorize="hasAuthority('ADMIN')">1. Visit <a th:href="@{/admin/example}">Admin page (Spring Security protected, Need Admin Role)</a></h2>
-        <h2 sec:authorize="hasAuthority('USER')">2. Visit <a th:href="@{/}">User page (Spring Security protected, Need User Role)</a></h2>
-        <h2>3. Visit <a th:href="@{/users}">Users page</a></h2>
-    </div>
+<!--    <div class="starter-template">-->
+<!--        <h1>Spring Boot Web Thymeleaf + Spring Security</h1>-->
+<!--        <h2 sec:authorize="hasAuthority('ADMIN')">1. Visit <a th:href="@{/admin/example}">Admin page (Spring Security protected, Need Admin Role)</a></h2>-->
+<!--        <h2 sec:authorize="hasAuthority('USER')">2. Visit <a th:href="@{/}">User page (Spring Security protected, Need User Role)</a></h2>-->
+<!--        <h2>3. Visit <a th:href="@{/users}">Users page</a></h2>-->
+<!--    </div>-->
+    <div class=""
 </div>
 <!-- /.container -->
-
+//Najczesciej wybierane kursy//
 </body>
 </html>
