add references and authorization check to navbar

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,5 +18,10 @@
 </div>
 <!-- /.container -->
 //Najczesciej wybierane kursy//
+<div sec:authorize="hasAuthority('ADMIN')">
+
+    Dupa
+
+</div>
 </body>
 </html>
