--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -48,6 +48,9 @@
                     <li class="active" sec:authorize="${isAuthenticated()}"><a th:href="@{/details}"><span
                             class="glyphicon glyphicon-user"></span> Konto Użytkownika</a></li>
 
+                    <li class="active" ><a th:href="@{/contact/showForm}"><span
+                            class="glyphicon glyphicon-user"></span> Kontakt</a></li>
+
                     <li class="active" sec:authorize="${isAuthenticated()}">
                         <a>
                             <form th:action="@{/logout}" method="post">
