--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Register Page</title>
+    <title>Wyniki</title>
     <div th:replace="header :: header-css"/>
 </head>
 <body>
