--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -4,7 +4,7 @@
     <title>eLearning</title>
     <link rel="stylesheet" th:href="@{/css/stylesheet.css}" href="css/stylesheet.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" th:href="@{/img/favicon.png}" href="img/favicon.png"/>
+    <!--<link rel="icon" type="image/png" th:href="@{/img/favicon.png}" href="img/favicon.png"/>-->
 
 
 </head>
